; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/bcma/extr_driver_chipcommon_pmu.c_bcma_pmu_spuravoid_pll_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/bcma/extr_driver_chipcommon_pmu.c_bcma_pmu_spuravoid_pll_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcma_drv_cc = type { i32 }

@BCMA_CC_PLLCTL_ADDR = common dso_local global i32 0, align 4
@BCMA_CC_PLLCTL_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bcma_drv_cc*, i32, i32)* @bcma_pmu_spuravoid_pll_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bcma_pmu_spuravoid_pll_write(%struct.bcma_drv_cc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.bcma_drv_cc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.bcma_drv_cc* %0, %struct.bcma_drv_cc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.bcma_drv_cc*, %struct.bcma_drv_cc** %4, align 8
  %8 = load i32, i32* @BCMA_CC_PLLCTL_ADDR, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @bcma_cc_write32(%struct.bcma_drv_cc* %7, i32 %8, i32 %9)
  %11 = load %struct.bcma_drv_cc*, %struct.bcma_drv_cc** %4, align 8
  %12 = load i32, i32* @BCMA_CC_PLLCTL_DATA, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @bcma_cc_write32(%struct.bcma_drv_cc* %11, i32 %12, i32 %13)
  ret void
}

declare dso_local i32 @bcma_cc_write32(%struct.bcma_drv_cc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
